--- a/notebooks/stochasticClosure/01_generateBinningSamplingModel.ipynb
+++ b/notebooks/stochasticClosure/01_generateBinningSamplingModel.ipynb
@@ -15,7 +15,7 @@
     "import matplotlib.pyplot as plt\n",
     "import deepRD.tools.trajectoryTools as trajectoryTools\n",
     "import deepRD.tools.analysisTools as analysisTools\n",
-    "from deepRD.noiseSampler import binnedData_qi, binnedData_ri"
+    "from deepRD.noiseSampler import binnedData_qi, binnedData_ri, binnedData_qiri, binnedData_qiririm"
    ]
   },
   {
@@ -216,6 +216,157 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5bec1a4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "localDataDirectory = '../../data/stochasticClosure/binnedData/'\n",
+    "qiBinnedDataFilename = localDataDirectory + 'qiBinnedData.pickle'\n",
+    "#binnedDataFilename = localDataDirectory + 'riBinnedData.pickle'\n",
+    "qiBinnedData = pickle.load(open(qiBinnedDataFilename, \"rb\" ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "269b3bdf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qiriBinnedDataFilename = localDataDirectory + 'qiriBinnedData.pickle'\n",
+    "#binnedDataFilename = localDataDirectory + 'riBinnedData.pickle'\n",
+    "qiriBinnedData = pickle.load(open(qiriBinnedDataFilename, \"rb\" ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b78c527d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qiririmBinnedDataFilename = localDataDirectory + 'qiririmBinnedData.pickle'\n",
+    "#binnedDataFilename = localDataDirectory + 'riBinnedData.pickle'\n",
+    "qiririmBinnedData = pickle.load(open(qiririmBinnedDataFilename, \"rb\" ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "636cff86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qiBinnedData.nearestOccupiedNeighbour(np.array([24,24,24]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec1550f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qiriBinnedData.getBinIndex([3,2,1,0.5,0.5,0.5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85f97192",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for array in qiririmBinnedData.occupiedTuplesArray:\n",
+    "    if array[3]>5:\n",
+    "        print(array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "638ac4ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trajs[0][5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6744d432",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "posIndex = 1  # Position of x coordinate in trajectory files\n",
+    "rIndex = 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbd9bae7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qi = trajs[8][1000][posIndex:posIndex + 3]\n",
+    "ri = trajs[8][1000][rIndex:rIndex + 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29672d62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ab6bb6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ri"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9b54090",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qiri = np.concatenate([qi,ri])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f52fe5ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qiri"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2511e148",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qiriBinnedData.getBinIndex(qiri)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "799510f5",
    "metadata": {},
    "outputs": [],
    "source": []
