WORKING! fixed minor bug

--- a/notebooks/stochasticClosure/02_runLangevinNoiseSampler.ipynb
+++ b/notebooks/stochasticClosure/02_runLangevinNoiseSampler.ipynb
@@ -12,7 +12,6 @@
     "from scipy import stats\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
-    "import pickle\n",
     "import deepRD\n",
     "from deepRD.diffusionIntegrators import langevinNoiseSampler, langevin\n",
     "from deepRD.potentials import harmonic\n",
@@ -43,8 +42,8 @@
     "# Load binning sampling models\n",
     "binnedDataFilename = localDataDirectory + 'qiBinnedData.pickle'\n",
     "#binnedDataFilename = localDataDirectory + 'riBinnedData.pickle'\n",
-    "binnedData = pickle.load(open(binnedDataFilename, \"rb\" ))\n",
-    "parameters = binnedData.parameterDictionary\n",
+    "dataOnBins = pickle.load(open(binnedDataFilename, \"rb\" ))\n",
+    "parameters = dataOnBins.parameterDictionary\n",
     "print(parameters)"
    ]
   },
@@ -76,7 +75,7 @@
    "source": [
     "# Define noise sampler\n",
     "#nSampler = noiseSampler()\n",
-    "nSampler = noiseSampler(binnedData)"
+    "nSampler = noiseSampler(dataOnBins)"
    ]
   },
   {
