Update source in scripts

--- a/notebooks/stochasticClosure/03_plotComparison.ipynb
+++ b/notebooks/stochasticClosure/03_plotComparison.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07fbcf0d",
+   "id": "428946ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,15 +21,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38d4424e",
+   "id": "65c8ee08",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Benchmark data folder\n",
-    "parentDirectory = os.environ.get('MSMRD') + '/data/MoriZwanzig/benchmarkComparison/'\n",
+    "parentDirectory = os.environ.get('MSMRD') + '/data/MoriZwanzig/harmonic/benchmarkComparison/'\n",
     "benchmarkfnamebase = parentDirectory + 'simMoriZwanzig_'\n",
     "# Reduced models data folders\n",
-    "localDataDirectory = '../../data/stochasticClosure/benchmarkReduced'\n",
+    "localDataDirectory = '../../data/stochasticClosure/harmonic/benchmarkReduced'\n",
     "numModels = 8\n",
     "redModelfnamebase = [localDataDirectory]*numModels\n",
     "redModelfnamebase[0] += '_ri/simMoriZwanzigReduced_'\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c5a3888",
+   "id": "d5754d64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13854f80",
+   "id": "d4c7c51f",
    "metadata": {},
    "source": [
     "## Load benchmark and reduced model trajectory data"
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4e4b1ba",
+   "id": "efff632a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6664dfc9",
+   "id": "a223979f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
     "    try:\n",
     "        iTraj = []\n",
     "        for j in range(numSimulations):\n",
-    "            traj = trajectoryTools.loadTrajectory(redModelfnamebase[i], i)\n",
+    "            traj = trajectoryTools.loadTrajectory(redModelfnamebase[i], j)\n",
     "            iTraj.append(traj)\n",
     "            print(\"File \", i+1, \" of \", numSimulations, \" done.\", end=\"\\r\")\n",
     "        allTrajs[i] = iTraj\n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2dd0058",
+   "id": "b7fe07de",
    "metadata": {},
    "source": [
     "## Distribution plots comparisons"
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a5ed3be",
+   "id": "2f0c1d83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c2055f6",
+   "id": "171cbdea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,13 +161,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c239d1f",
+   "id": "9213cc0e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot distirbution comparison for position\n",
+    "# Plot distribution comparison for position\n",
     "plotLines = True\n",
-    "numbins = 50\n",
+    "numbins = 40\n",
     "pos, binEdges = np.histogram(position, bins=numbins, density = True)\n",
     "binsPos = 0.5 * (binEdges[1:] + binEdges[:-1])\n",
     "posRef, binEdges = np.histogram(position_ref, bins=numbins, density = True)\n",
@@ -188,13 +188,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c505d2ec",
+   "id": "c57f6144",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Plot distirbution comparison for velocity\n",
     "plotLines = True\n",
-    "numbins = 50\n",
+    "numbins = 40\n",
     "vel, binEdges = np.histogram(velocity, bins=numbins, density = True)\n",
     "binsVel = 0.5 * (binEdges[1:] + binEdges[:-1])\n",
     "velRef, binEdges = np.histogram(velocity_ref, bins=numbins, density = True)\n",
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07a9c771",
+   "id": "6465a697",
    "metadata": {},
    "source": [
     "## Autocorrelation function comparison"
@@ -223,28 +223,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af95567d",
+   "id": "bb3c6c94",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Uses only a subset (mtrajs) of the total trajectories, since computing them with all is very slow\n",
     "variables = ['position', 'velocity']\n",
     "lagtimesteps = 40\n",
+    "mtrajs = 20\n",
     "strides = [30,1]\n",
     "ACF = [None]*2\n",
     "ACF_ref = [None]*2\n",
     "for i, var in enumerate(variables):\n",
-    "    mean = trajectoryTools.calculateMean(trajs, var)\n",
-    "    mean_ref = trajectoryTools.calculateMean(trajs_ref, var)\n",
-    "    variance = trajectoryTools.calculateVariance(trajs, var, mean)\n",
-    "    variance_ref = trajectoryTools.calculateVariance(trajs_ref, var, mean_ref)\n",
-    "    ACF[i] = trajectoryTools.calculateAutoCorrelationFunction(trajs, lagtimesteps, strides[i], var)\n",
-    "    ACF_ref[i] = trajectoryTools.calculateAutoCorrelationFunction(trajs_ref, lagtimesteps, strides[i], var)"
+    "    mean = trajectoryTools.calculateMean(trajs[0:mtrajs], var)\n",
+    "    mean_ref = trajectoryTools.calculateMean(trajs_ref[0:mtrajs], var)\n",
+    "    variance = trajectoryTools.calculateVariance(trajs[0:mtrajs], var, mean)\n",
+    "    variance_ref = trajectoryTools.calculateVariance(trajs_ref[0:mtrajs], var, mean_ref)\n",
+    "    ACF[i] = trajectoryTools.calculateAutoCorrelationFunction(trajs[0:mtrajs], lagtimesteps, strides[i], var)\n",
+    "    ACF_ref[i] = trajectoryTools.calculateAutoCorrelationFunction(trajs_ref[0:mtrajs], lagtimesteps, strides[i], var)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a45857fa",
+   "id": "9294f3bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +264,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9a9daf9",
+   "id": "19d5dc61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index = 1\n",
+    "time = dt*integratorStride*strides[index]*np.linspace(1,lagtimesteps,lagtimesteps)\n",
+    "plt.plot(time, ACF[index], 'xk', label = 'reduced')\n",
+    "plt.plot(time, ACF_ref[index], '-k', label = 'benchmark')\n",
+    "plt.xlabel('time(ns)')\n",
+    "plt.ylabel(variables[index] + ' autocorrelation')\n",
+    "plt.legend()\n",
+    "#plt.xlim([0,1500])\n",
+    "#plt.savefig(variables[index]+ '_autocorrelation_'+ conditionedOn +'.pdf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26e995f9",
    "metadata": {},
    "outputs": [],
    "source": []
