Consistent implementations of diff integrators

--- a/notebooks/langevinNoiseSampler.ipynb
+++ b/notebooks/langevinNoiseSampler.ipynb
@@ -22,11 +22,10 @@
    "outputs": [],
    "source": [
     "# Define particle list\n",
-    "D = 1\n",
     "position = [0,0,0]\n",
     "velocity = [0,0,0]\n",
     "mass = 1\n",
-    "particle1 = deepRD.particle(position, D, velocity, mass)\n",
+    "particle1 = deepRD.particle(position, D=0.0, velocity = velocity, mass = mass)\n",
     "particleList = deepRD.particleList([particle1])"
    ]
   },
@@ -50,11 +49,12 @@
    "source": [
     "# Define integrator\n",
     "dt = 0.01\n",
+    "Gamma = 10.0\n",
     "stride = 1\n",
     "tfinal = 10\n",
     "kBT = 1\n",
     "boxsize = 1\n",
-    "diffIntegrator = langevinNoiseSampler(dt, stride, tfinal, noiseSampler, kBT, boxsize)"
+    "diffIntegrator = langevinNoiseSampler(dt, stride, tfinal, Gamma, noiseSampler, kBT, boxsize)"
    ]
   },
   {
