--- a/notebooks/langevin.ipynb
+++ b/notebooks/langevin.ipynb
@@ -21,11 +21,10 @@
    "outputs": [],
    "source": [
     "# Define particle list\n",
-    "D = 1\n",
     "position = [0,0,0]\n",
     "velocity = [0,0,0]\n",
     "mass = 1\n",
-    "particle1 = deepRD.particle(position, D, velocity, mass)\n",
+    "particle1 = deepRD.particle(position, D=0.0, velocity = velocity, mass = mass)\n",
     "particleList = deepRD.particleList([particle1])"
    ]
   },
@@ -38,11 +37,12 @@
    "source": [
     "# Define integrator\n",
     "dt = 0.01\n",
+    "Gamma = 10.0 # friction coefficients (units of mass/time)\n",
     "stride = 1\n",
     "tfinal = 10\n",
     "kBT = 1\n",
     "boxsize = 1\n",
-    "diffIntegrator = langevin(dt, stride, tfinal, kBT, boxsize)"
+    "diffIntegrator = langevin(dt, stride, tfinal, Gamma, kBT, boxsize) # Uses BAOAB scheme by default"
    ]
   },
   {
@@ -83,7 +83,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f4b3dc5",
+   "id": "9239e401",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b81db5f3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -91,7 +99,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -105,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
