--- a/notebooks/stochasticClosure/03_plotComparisonDimer.ipynb
+++ b/notebooks/stochasticClosure/03_plotComparisonDimer.ipynb
@@ -33,7 +33,7 @@
    "outputs": [],
    "source": [
     "# Benchmark data folderhttp://localhost:8888/notebooks/stochasticClosure/03_plotComparisonDimer.ipynb#\n",
-    "boxsize = 8\n",
+    "boxsize = 5\n",
     "parentDirectory = os.environ.get('DATA') + 'stochasticClosure/dimer/boxsize' + str(boxsize) + '/benchmarkComparisonBias/'\n",
     "benchmarkfnamebase = parentDirectory + 'simMoriZwanzig_'\n",
     "# Reduced models data folders\n",
@@ -695,7 +695,7 @@
    "id": "e0bf7b9d",
    "metadata": {},
    "source": [
-    "## Plot FPTs distributions (not implemented yet)"
+    "## Plot FPTs distributions"
    ]
   },
   {
@@ -705,10 +705,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transition = 'OC'\n",
+    "transition = 'CO'\n",
     "boxs = 5\n",
-    "fname1 = os.environ['DATA'] + 'stochasticClosure/dimer/boxsize' + str(boxs) + '/benchmarkFPTcomparison/simMoriZwanzigFPTs_'+ transition + '_box' + str(boxs) + '_nsims' +'10000.xyz'\n",
-    "fname2 = os.environ['DATA'] + 'stochasticClosure/dimerGlobal/boxsize' + str(boxs) + '/benchmarkFPTreduced/simMoriZwanzigFPTs_'+ transition + '_' + conditionedOn + '_box' + str(boxs) +'_10000.xyz'"
+    "conditionedOn = 'piri'\n",
+    "fname1 = os.environ['DATA'] + 'stochasticClosure/dimer/boxsize' + str(boxs) + '/benchmarkFPTcomparison/simMoriZwanzigFPTs_'+ transition + '_box' + str(boxs) + '_nsims10000.xyz'\n",
+    "fname2 = os.environ['DATA'] + 'stochasticClosure/dimerGlobal/boxsize' + str(boxs) + '/benchmarkFPTreduced/simMoriZwanzigFPTs_'+ transition + '_' + conditionedOn + '_box' + str(boxs) +'_nsims10000.xyz'"
    ]
   },
   {
@@ -720,7 +721,7 @@
    "source": [
     "# Load data from files\n",
     "file1 = open(fname1, \"r\")\n",
-    "#file2 = open(fname2, \"r\")\n",
+    "file2 = open(fname2, \"r\")\n",
     "\n",
     "# Read files and save to array\n",
     "filelines = file1.readlines()\n",
@@ -743,7 +744,7 @@
     "numbins = 50\n",
     "plt.hist(benchmarkFPT, numbins, alpha = 0.5, density=True, label='benchmark')\n",
     "plt.hist(benchmarkFPTreduced, numbins, alpha = 0.5, density=True, label='reduced')\n",
-    "plt.legend()"
+    "plt.legend();"
    ]
   },
   {
@@ -821,7 +822,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
