--- a/notebooks/stochasticClosure/03_plotComparisonDimer.ipynb
+++ b/notebooks/stochasticClosure/03_plotComparisonDimer.ipynb
@@ -22,7 +22,8 @@
     "colorList3 = ['0077BB', '33BBEE', '009988', 'EE7733', 'CC3311', 'EE3377', 'BBBBBB']\n",
     "colorList3alt = ['EE7733', 'A50026', '0077BB', '009988', '33BBEE', 'BBBBBB']\n",
     "colorList3alt2 = ['A50026', '0077BB', '009988', '33BBEE', 'BBBBBB', 'EE7733']\n",
-    "matplotlib.rcParams['axes.prop_cycle'] = matplotlib.cycler(color=colorList3alt2)"
+    "colorList3alt3 = ['A50026', '0077BB', '3F3F3F']\n",
+    "matplotlib.rcParams['axes.prop_cycle'] = matplotlib.cycler(color=colorList3alt3)"
    ]
   },
   {
@@ -33,7 +34,7 @@
    "outputs": [],
    "source": [
     "# Benchmark data folderhttp://localhost:8888/notebooks/stochasticClosure/03_plotComparisonDimer.ipynb#\n",
-    "boxsize = 5\n",
+    "boxsize = 8\n",
     "parentDirectory = os.environ.get('DATA') + 'stochasticClosure/dimer/boxsize' + str(boxsize) + '/benchmarkComparisonBias/'\n",
     "benchmarkfnamebase = parentDirectory + 'simMoriZwanzig_'\n",
     "# Reduced models data folders\n",
@@ -46,8 +47,8 @@
     "redModelfnamebase[3] += '_qiri/simMoriZwanzigReduced_'\n",
     "redModelfnamebase[4] += '_qiririm/simMoriZwanzigReduced_'\n",
     "redModelfnamebase[5] += '_pi/simMoriZwanzigReduced_'\n",
-    "redModelfnamebase[6] += '_piri/simMoriZwanzigReduced_'\n",
-    "redModelfnamebase[7] += '_piririm/simMoriZwanzigReduced_'\n",
+    "redModelfnamebase[6] += '_piri_5bins/simMoriZwanzigReduced_' ####MODIFIED 5bins\n",
+    "redModelfnamebase[7] += '_piririm_10bins/simMoriZwanzigReduced_' ####MODIFIED 5bins\n",
     "redModelfnamebase[8] += '_qipi/simMoriZwanzigReduced_'\n",
     "redModelfnamebase[9] += '_qipiri/simMoriZwanzigReduced_'\n",
     "redModelfnamebase[10] += '_qipiririm/simMoriZwanzigReduced_'\n",
@@ -68,7 +69,8 @@
     "redModelfnamebase[25] += '_dpiviririm/simMoriZwanzigReduced_'\n",
     "redModelfnamebase[26] += '_vi/simMoriZwanzigReduced_'\n",
     "redModelfnamebase[27] += '_viri/simMoriZwanzigReduced_'\n",
-    "redModelfnamebase[28] += '_viririm/simMoriZwanzigReduced_'"
+    "redModelfnamebase[28] += '_viririm/simMoriZwanzigReduced_'\n",
+    "redModelfnamebase[29] += '_pipimri_5bins/simMoriZwanzigReduced_' ####MODIFIED 5bins\n"
    ]
   },
   {
@@ -80,7 +82,7 @@
    "source": [
     "# Read relevant parameters\n",
     "parameterDictionary = analysisTools.readParameters(parentDirectory + \"parameters\")\n",
-    "numSimulations = 50 #parameterDictionary['numFiles']\n",
+    "numSimulations = 5 #parameterDictionary['numFiles']\n",
     "dt = parameterDictionary['dt'] \n",
     "integratorStride = parameterDictionary['stride']\n",
     "totalTimeSteps = parameterDictionary['timesteps'] \n",
@@ -153,7 +155,7 @@
    "outputs": [],
    "source": [
     "# Choose which reduced model to compare (just uncomment one)\n",
-    "conditionedList = ['pi','piri', 'piririm'] #['dqi','dqiri', 'dqiririm'] #Possibilities 'dqi', 'dpi', 'dvi, 'ri', 'qiri', 'qiririm'\n",
+    "conditionedList = ['pi','piri', 'piririm', 'pipimri'] #['dqi','dqiri', 'dqiririm'] #Possibilities 'dqi', 'dpi', 'dvi, 'ri', 'qiri', 'qiririm'\n",
     "trajIndexes = []\n",
     "if 'ri' in conditionedList:\n",
     "    trajIndexes.append(0)\n",
@@ -213,6 +215,8 @@
     "    trajIndexes.append(27)\n",
     "if 'viririm' in conditionedList:\n",
     "    trajIndexes.append(28)\n",
+    "if 'pipimri' in conditionedList:\n",
+    "    trajIndexes.append(29)\n",
     "\n",
     "numConditions = len(trajIndexes)\n",
     "# Note in plot labels x = q and v = p\n",
@@ -244,11 +248,13 @@
     "             r'$\\tilde{r}_{i+1}|\\Delta\\tilde{v}_i, v_i^{CM}, \\tilde{r}_i, \\tilde{r}_{i-1}$',\n",
     "             r'$\\tilde{r}_{i+1}|\\tilde{v_R}_i$', \n",
     "             r'$\\tilde{r}_{i+1}|\\tilde{v_R}_i,\\tilde{r}_i$', \n",
-    "             r'$\\tilde{r}_{i+1}|\\tilde{v_R}_i, \\tilde{r}_i, \\tilde{r}_{i-1}$']\n",
-    "lwList = [2, 2, 2]*2\n",
-    "lineTypeList = ['-.', '--', 'xk']*2\n",
-    "#lwList = [2, 2, 2, 2]*2\n",
-    "#lineTypeList = [':', '-.', '--', 'xk']*2"
+    "             r'$\\tilde{r}_{i+1}|\\tilde{v_R}_i, \\tilde{r}_i, \\tilde{r}_{i-1}$',\n",
+    "             r'$\\tilde{r}_{i+1}|\\tilde{v}_i,\\tilde{v}_{i-1},\\tilde{r}_i$']\n",
+    "#lwList = [2, 2, 2]*2\n",
+    "#lineTypeList = ['-.', '--', 'xk']*2\n",
+    "lwList = [2, 2, 2, 2]*2\n",
+    "lineTypeList = ['-.', '--', 'x', '*k']*2 \n",
+    "#lineTypeList = ['-.', '--', ':', 'xk']*2 "
    ]
   },
   {
@@ -468,7 +474,7 @@
     "#ax1.set_ylim([-0.2,2.5])\n",
     "ax2.legend(loc = 'lower left',  bbox_to_anchor=(-0.36, 0.5), framealpha = 1.0);\n",
     "#plt.savefig('dimer_distributions_comparison_global_bias_box' + str(boxsize) + '.pdf')\n",
-    "plt.savefig('dimer_distributions_comparison_global_bias_box' + str(boxsize) + '.pdf')"
+    "#plt.savefig('dimer_distributions_comparison_global_bias_box' + str(boxsize) + '.pdf')"
    ]
   },
   {
@@ -553,7 +559,7 @@
     "#ax1.set_xlim([1,15])\n",
     "#ax1.set_ylim([0.3,1])\n",
     "#ax1.legend()\n",
-    "plt.savefig('relativeDistance_autocorr_global_bias_box' + str(boxsize) + '.pdf')"
+    "#plt.savefig('relativeDistance_autocorr_global_bias_box' + str(boxsize) + '.pdf')"
    ]
   },
   {
@@ -578,7 +584,7 @@
     "#ax1.set_xlim([1,15])\n",
     "#ax1.set_ylim([-0.05,0.8])\n",
     "#ax1.legend()\n",
-    "plt.savefig('relativeVelocity_autocorr_global_bias_box' + str(boxsize) + '.pdf')"
+    "#plt.savefig('relativeVelocity_autocorr_global_bias_box' + str(boxsize) + '.pdf')"
    ]
   },
   {
@@ -615,7 +621,7 @@
     "ax1.set_ylabel('Relative orientation autocorrelation')\n",
     "ax1.yaxis.tick_right()\n",
     "#ax1.legend()\n",
-    "plt.savefig('relativeOrientation_autocorr_global_bias_box' + str(boxsize) + '.pdf')"
+    "#plt.savefig('relativeOrientation_autocorr_global_bias_box' + str(boxsize) + '.pdf')"
    ]
   },
   {
@@ -687,7 +693,7 @@
     "ax2.yaxis.tick_right()\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig('posVel_autocorr_global_bias_box' + str(boxsize) + '.pdf')"
+    "#plt.savefig('posVel_autocorr_global_bias_box' + str(boxsize) + '.pdf')"
    ]
   },
   {
@@ -706,10 +712,11 @@
    "outputs": [],
    "source": [
     "transition = 'CO'\n",
-    "boxs = 5\n",
-    "conditionedOn = 'piri'\n",
-    "fname1 = os.environ['DATA'] + 'stochasticClosure/dimer/boxsize' + str(boxs) + '/benchmarkFPTcomparison/simMoriZwanzigFPTs_'+ transition + '_box' + str(boxs) + '_nsims10000.xyz'\n",
-    "fname2 = os.environ['DATA'] + 'stochasticClosure/dimerGlobal/boxsize' + str(boxs) + '/benchmarkFPTreduced/simMoriZwanzigFPTs_'+ transition + '_' + conditionedOn + '_box' + str(boxs) +'_nsims10000.xyz'"
+    "boxs = 8\n",
+    "conditionedOn = 'pipimri'\n",
+    "nsims = 1000\n",
+    "fname1 = os.environ['DATA'] + 'stochasticClosure/dimer/boxsize' + str(boxs) + '/benchmarkFPTcomparison/simMoriZwanzigFPTs_'+ transition + '_box' + str(boxs) + '_nsims' + str(nsims) +'.xyz'\n",
+    "fname2 = os.environ['DATA'] + 'stochasticClosure/dimerGlobal/boxsize' + str(boxs) + '/benchmarkFPTreduced/simMoriZwanzigFPTs_'+ transition + '_' + conditionedOn + '_box' + str(boxs) + '_nsims' + str(nsims) +'.xyz'"
    ]
   },
   {
