--- a/notebooks/stochasticClosure/03_plotComparisonDimer.ipynb
+++ b/notebooks/stochasticClosure/03_plotComparisonDimer.ipynb
@@ -13,6 +13,7 @@
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.integrate import quad\n",
+    "from scipy import stats\n",
     "from deepRD.noiseSampler import binnedData\n",
     "import deepRD.tools.trajectoryTools as trajectoryTools\n",
     "import deepRD.tools.analysisTools as analysisTools\n",
@@ -584,7 +585,8 @@
     "#ax1.set_xlim([1,15])\n",
     "#ax1.set_ylim([-0.05,0.8])\n",
     "#ax1.legend()\n",
-    "#plt.savefig('relativeVelocity_autocorr_global_bias_box' + str(boxsize) + '.pdf')"
+    "#plt.savefig('relativeVelocity_autocorr_global_bias_box' + str(boxsize) + '.pdf')\n",
+    "#plt.savefig('relativeVelocity_autocorr_global_bias_box' + str(boxsize) + '_zoom.pdf')"
    ]
   },
   {
@@ -702,6 +704,92 @@
    "metadata": {},
    "source": [
     "## Plot FPTs distributions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "328071b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set loading data\n",
+    "transition = 'CO'\n",
+    "boxs = 8\n",
+    "nsims = 1000\n",
+    "numbinsFPT = 30\n",
+    "maxplotTime = 500\n",
+    "fname2 = [None]*len(conditionedList)\n",
+    "fname1 = os.environ['DATA'] + 'stochasticClosure/dimer/boxsize' + str(boxs) + '/benchmarkFPTcomparison/simMoriZwanzigFPTs_'+ transition + '_box' + str(boxs) + '_nsims' + str(nsims) +'.xyz'\n",
+    "for i in range(len(conditionedList)):\n",
+    "    fname2[i] = os.environ['DATA'] + 'stochasticClosure/dimerGlobal/boxsize' + str(boxs) + '/benchmarkFPTreduced/simMoriZwanzigFPTs_'+ transition + '_' + conditionedList[i] + '_box' + str(boxs) + '_nsims' + str(nsims) +'.xyz'\n",
+    "file2 = [None]*len(conditionedList)\n",
+    "file1 = open(fname1, \"r\")\n",
+    "for i in range(len(conditionedList)):\n",
+    "    file2[i] = open(fname2[i], \"r\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1044a639",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read files and save to arrays\n",
+    "filelines = file1.readlines()\n",
+    "benchmarkFPT = np.zeros(len(filelines), dtype = int)\n",
+    "for i, line in enumerate(filelines):\n",
+    "    benchmarkFPT[i] = int(float(line))\n",
+    "\n",
+    "benchFPTreduced = [None]*len(conditionedList)\n",
+    "for j in range(len(conditionedList)):\n",
+    "    filelines = file2[j].readlines()\n",
+    "    benchmarkFPTreduced = np.zeros(len(filelines), dtype = int)\n",
+    "    for i, line in enumerate(filelines):\n",
+    "        benchmarkFPTreduced[i] = int(float(line))\n",
+    "    benchFPTreduced[j] = benchmarkFPTreduced"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3456089",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "bw=0.2\n",
+    "densityFPT = stats.kde.gaussian_kde(benchmarkFPT,bw)\n",
+    "densityFPTreduced = [None]*len(conditionedList)\n",
+    "for j in range(numConditions):\n",
+    "    densityFPTreduced[j] = stats.kde.gaussian_kde(benchFPTreduced[j],bw)\n",
+    "\n",
+    "time = np.arange(0., maxplotTime, 5)\n",
+    "ax.plot(time, densityFPT(time),'-k', label='benchmark')\n",
+    "for j in range(numConditions):\n",
+    "    index = trajIndexes[j]\n",
+    "    ax.plot(time, densityFPTreduced[j](time), lineTypeList[j], lw=lwList[j], label=labelList[index]);\n",
+    "\n",
+    "ax.set_xlim((0, maxplotTime))\n",
+    "ax.set_ylim((0, None))\n",
+    "ax.set_xlabel('time(ns)')\n",
+    "ax.set_ylabel('FPT distribution')\n",
+    "#ax.yaxis.set_ticks(np.arange(0, 0.0031, 0.001))\n",
+    "\n",
+    "ax.legend(bbox_to_anchor=(0.6, 0., 0.5, 1.0), framealpha=1.0)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.savefig('FPT_distributions_bistable.pdf')\n",
+    "print('FPT distributions plots done.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "962988b7",
+   "metadata": {},
+   "source": [
+    "### Old FPT plotting scheme"
    ]
   },
   {
